fix: Fix overflowing centered popup containers

--- a/assets/stylesheets/components/popups.css
+++ b/assets/stylesheets/components/popups.css
@@ -43,6 +43,7 @@
 }
 
 .popup__container--center {
+    right: auto;
     left: 50%;
 
     margin-top: 0.5rem;
